# wasmer-sectest

./: .gitignore  Cargo.toml  Makefile  README.md  README_DEMO.md  SECURITY.md  policy.example.toml  run-tui.sh  start.sh
.github/workflows/: ci.yml
benches/: runtime.rs
docs/: abi-contract.md  interview-runbook.md  productization-plan.md  threat-model.md
examples/external-corpus/: corpus.toml  external_overflow.wat
examples/sockets/: Cargo.toml
examples/sockets/src/: client.rs  server.rs
guests/: bad_magic.wat  bad_version.wat  body_len_mismatch.wat  boundary_valid_packet.wat  cap_string_too_large.wat  capability_allowed.wat  capability_escape.wat  checksum_mismatch.wat  cpu_metered_loop.wat  excessive_alloc.wat  excessive_memory.wat  good_packet.wat  invalid_align_param.wat  invalid_utf8_path.wat  memory_grow_probe.wat  non_cooperative_loop.wat  null_byte_capability.wat  out_of_bounds.wat  packet_too_large.wat  path_traversal.wat  truncated_header.wat  unaligned_packet.wat  wasi_network_fetch.rs  zero_copy_write_probe.wat  zero_length_packet.wat
scripts/: ensure-wasi-target.sh  install.sh  wasmer-cli-matrix.sh
src/: abi.rs  ansi.rs  async_runner.rs  config.rs  corpus.rs  error.rs  guests.rs  lib.rs  main.rs  math.rs  memory.rs  optimizer.rs  policy.rs  report.rs  runner.rs  session.rs  supervisor.rs  telemetry.rs  tui.rs  visual.rs  wasi_sandbox.rs
tests/: host_guest_security.rs  wasi_network_interception.rs
